updated moving shapes

--- a/moving-shapes/index.html
+++ b/moving-shapes/index.html
@@ -15,16 +15,22 @@
 
 <body>
 
+  <div id="shapes-background">
   <div id="shape-1" class="shape-triangle"></div>
-<div id="shape-2" class="shape-circle"></div>
-<div id="shape-3" class="shape-triangle-outline"></div>
-<div id="shape-4" class="shape-triangle-outline"></div>
-<div id="shape-5" class="shape-circle"></div>
-<div id="shape-6" class="shape-circle"></div>
-<div id="shape-7" class="shape-circle"></div>
-<div id="shape-8" class="shape-circle"></div>
-<div id="shape-9" class="shape-circle"></div>
-<div id="shape-10" class="shape-circle"></div>
+  <div id="shape-2" class="shape-circle"></div>
+  <div class="shape-triangle-outline-container"><div id="shape-3" class="shape-triangle-outline"></div></div>
+  <div class="shape-triangle-outline-container"><div id="shape-4" class="shape-triangle-outline"></div></div>
+  <div id="shape-5" class="shape-circle"></div>
+  <div id="shape-6" class="shape-circle"></div>
+  <div id="shape-7" class="shape-circle"></div>
+  <div id="shape-8" class="shape-circle"></div>
+  <div id="shape-9" class="shape-circle"></div>
+  <div id="shape-10" class="shape-circle"></div>
+</div>
+<div id="shapes-foreground">
+  <h1>Julia Roga</h1>
+    <h2>WEBSITE DESIGN AND DEVELOPMENT</h2>
+</div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 
